Исправлены стили. Сохранение вкладок

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <!-- Табы -->
         <div class="tabs">
-            <button type="button" class="tab-button active" onclick="openTab('arborea')">Арборея</button>
-            <button type="button" class="tab-button" onclick="openTab('exodor')">Экзодор</button>
+            <button type="button" class="tab-button active" id="tab-arborea" onclick="openTab('arborea')">Арборея</button>
+            <button type="button" class="tab-button" id="tab-exodor" onclick="openTab('exodor')">Экзодор</button>
         </div>
 
         <div id="arborea" class="tab-content active">
