--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Рыбалка в TERA</h1>
+        <h1>Гид рыбалова в TERA</h1>
 
         <!-- Единая панель: удочки + сброс -->
         <div class="control-panel">
